# python-astral-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  markdownlint.jsonc  pyproject.toml  ruff.toml  ty.toml
